--- a/1_foundations/1_lab1.ipynb
+++ b/1_foundations/1_lab1.ipynb
@@ -141,20 +141,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gemini API Key exists and begins AIzaSyC7\n"
+     ]
+    }
+   ],
    "source": [
     "# Check the key - if you're not using OpenAI, check whichever key you're using! Ollama doesn't need a key.\n",
     "\n",
     "import os\n",
-    "openai_api_key = os.getenv('OPENAI_API_KEY')\n",
+    "GEMINI_API_KEY = os.getenv(\"GEMINI_API_KEY\")\n",
     "\n",
-    "if openai_api_key:\n",
-    "    print(f\"OpenAI API Key exists and begins {openai_api_key[:8]}\")\n",
+    "if GEMINI_API_KEY:\n",
+    "    print(f\"Gemini API Key exists and begins {GEMINI_API_KEY[:8]}\")\n",
     "else:\n",
-    "    print(\"OpenAI API Key not set - please head to the troubleshooting guide in the setup folder\")\n",
+    "    print(\"Gemini API Key not set - please head to the troubleshooting guide in the setup folder\")\n",
     "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# And now - the all important import statement\n",
+    "# If you get an import error - head over to troubleshooting in the Setup folder\n",
+    "\n",
+    "from openai import OpenAI\n",
+    "from dotenv import load_dotenv\n",
+    "load_dotenv(override=True)"
    ]
   },
   {
@@ -163,29 +196,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# And now - the all important import statement\n",
-    "# If you get an import error - head over to troubleshooting in the Setup folder\n",
-    "\n",
-    "from openai import OpenAI"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# And now we'll create an instance of the OpenAI class\n",
     "# If you're not sure what it means to create an instance of a class - head over to the guides folder (guide 6)!\n",
     "# If you get a NameError - head over to the guides folder (guide 6)to learn about NameErrors - always instantly fixable\n",
     "# If you're not using OpenAI, you just need to slightly modify this - precise instructions are in the AI APIs guide (guide 9)\n",
     "\n",
-    "openai = OpenAI()"
+    "GEMINI_BASE_URL = \"https://generativelanguage.googleapis.com/v1beta/openai/\"\n",
+    "google_api_key = os.getenv(\"GEMINI_API_KEY\")\n",
+    "gemini = OpenAI(base_url=GEMINI_BASE_URL, api_key=google_api_key)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,26 +219,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2+2 = 4\n"
+     ]
+    }
+   ],
    "source": [
     "# And now call it! Any problems, head to the troubleshooting guide\n",
     "# This uses GPT 4.1 nano, the incredibly cheap model\n",
     "# The APIs guide (guide 9) has exact instructions for using even cheaper or free alternatives to OpenAI\n",
     "# If you get a NameError, head to the guides folder (guide 6) to learn about NameErrors - always instantly fixable\n",
     "\n",
-    "response = openai.chat.completions.create(\n",
-    "    model=\"gpt-4.1-nano\",\n",
-    "    messages=messages\n",
-    ")\n",
-    "\n",
+    "response = gemini.chat.completions.create(model=\"gemini-2.5-flash-preview-05-20\", messages=messages)\n",
     "print(response.choices[0].message.content)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,16 +254,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Complete the sequence: 1, 2, 6, 42, 1806, ?\n"
+     ]
+    }
+   ],
    "source": [
     "# ask it - this uses GPT 4.1 mini, still cheap but more powerful than nano\n",
     "\n",
-    "response = openai.chat.completions.create(\n",
-    "    model=\"gpt-4.1-mini\",\n",
-    "    messages=messages\n",
-    ")\n",
+    "response = gemini.chat.completions.create(model=\"gemini-2.5-flash-preview-05-20\", messages=messages)\n",
     "\n",
     "question = response.choices[0].message.content\n",
     "\n",
@@ -245,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,16 +287,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The pattern in this sequence is that each term is found by multiplying the previous term by (the previous term + 1).\n",
+      "\n",
+      "Let's verify:\n",
+      "*   1 * (1 + 1) = 1 * 2 = 2\n",
+      "*   2 * (2 + 1) = 2 * 3 = 6\n",
+      "*   6 * (6 + 1) = 6 * 7 = 42\n",
+      "*   42 * (42 + 1) = 42 * 43 = 1806\n",
+      "\n",
+      "So, to find the next term:\n",
+      "*   1806 * (1806 + 1) = 1806 * 1807\n",
+      "\n",
+      "1806 * 1807 = 3,263,442\n",
+      "\n",
+      "The complete sequence is: 1, 2, 6, 42, 1806, **3,263,442**\n"
+     ]
+    }
+   ],
    "source": [
     "# Ask it again\n",
     "\n",
-    "response = openai.chat.completions.create(\n",
-    "    model=\"gpt-4.1-mini\",\n",
-    "    messages=messages\n",
-    ")\n",
+    "response = gemini.chat.completions.create(model=\"gemini-2.5-flash-preview-05-20\", messages=messages)\n",
     "\n",
     "answer = response.choices[0].message.content\n",
     "print(answer)\n"
@@ -272,9 +322,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "The pattern in this sequence is that each term is found by multiplying the previous term by (the previous term + 1).\n",
+       "\n",
+       "Let's verify:\n",
+       "*   1 * (1 + 1) = 1 * 2 = 2\n",
+       "*   2 * (2 + 1) = 2 * 3 = 6\n",
+       "*   6 * (6 + 1) = 6 * 7 = 42\n",
+       "*   42 * (42 + 1) = 42 * 43 = 1806\n",
+       "\n",
+       "So, to find the next term:\n",
+       "*   1806 * (1806 + 1) = 1806 * 1807\n",
+       "\n",
+       "1806 * 1807 = 3,263,442\n",
+       "\n",
+       "The complete sequence is: 1, 2, 6, 42, 1806, **3,263,442**"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from IPython.display import Markdown, display\n",
     "\n",
@@ -323,17 +399,38 @@
    "source": [
     "# First create the messages:\n",
     "\n",
-    "messages = [{\"role\": \"user\", \"content\": \"Something here\"}]\n",
+    "messages = [{\"role\": \"user\", \"content\": \"Tell me a business idea that is worth exploring for Agentic AI opportunities. Respond only with the business idea.\"}]\n",
     "\n",
     "# Then make the first call:\n",
     "\n",
-    "response =\n",
+    "response = gemini.chat.completions.create(model=\"gemini-2.5-flash-preview-05-20\", messages=messages)\n",
     "\n",
     "# Then read the business idea:\n",
     "\n",
-    "business_idea = response.\n",
+    "business_idea = response.choices[0].message.content\n",
     "\n",
-    "# And repeat! In the next message, include the business idea within the message"
+    "# And repeat! In the next message, include the business idea within the message\n",
+    "business_idea"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Autonomous AI Sales and Outreach Agents'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "business_idea"
    ]
   },
   {
@@ -344,7 +441,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -358,7 +455,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
