--- a/1_foundations/2_lab2.ipynb
+++ b/1_foundations/2_lab2.ipynb
@@ -35,11 +35,16 @@
    "source": [
     "# Start with imports - ask ChatGPT to explain any package that you don't know\n",
     "\n",
+    "# import os\n",
+    "# import json\n",
+    "# from dotenv import load_dotenv\n",
+    "# from openai import OpenAI\n",
+    "# from anthropic import Anthropic\n",
     "import os\n",
     "import json\n",
-    "from dotenv import load_dotenv\n",
     "from openai import OpenAI\n",
-    "from anthropic import Anthropic\n",
+    "from dotenv import load_dotenv\n",
+    "load_dotenv(override=True)\n",
     "from IPython.display import Markdown, display"
    ]
   },
@@ -452,7 +457,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -466,7 +471,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
